use maintained stretch-backports package
Make changes to configs as outlined here:
https://sources.debian.org/src/graphite-web/1.0.2+debian-2.1/debian/graphite-web.NEWS/
Don't use python-django from backports, it seems not to work with
graphite.

--- a/templates/apache_vhost.conf.j2
+++ b/templates/apache_vhost.conf.j2
@@ -6,8 +6,16 @@ Listen {{ graphite_vhost_ip }}:{{ graphite_port }}
     WSGIImportScript /usr/share/graphite-web/graphite.wsgi process-group=_graphite application-group=%{GLOBAL}
     WSGIScriptAlias / /usr/share/graphite-web/graphite.wsgi
 
-    Alias /content/ /usr/share/graphite-web/static/
-    <Location "/content/">
-	SetHandler None
+    Alias /static/ /usr/share/graphite-web/static/
+    <Location "/static/">
+        SetHandler None
     </Location>
+
+    ErrorLog ${APACHE_LOG_DIR}/graphite-web_error.log
+
+    # Possible values include: debug, info, notice, warn, error, crit,
+    # alert, emerg.
+    LogLevel warn
+
+    CustomLog ${APACHE_LOG_DIR}/graphite-web_access.log combined
 </VirtualHost>
